--- a/stock/src/main/resources/application.properties
+++ b/stock/src/main/resources/application.properties
@@ -1,8 +1,1 @@
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
-
-sprinng.datasource.url= jdbc:postgresql://localhost:5432/stock
-spring.datasource.username= root
-spring.datasource.password= root
-spring.jpa.hibernate.ddl-auto= update
+spring.profiles.active=test
