--- a/stock/src/main/resources/application-test.properties
+++ b/stock/src/main/resources/application-test.properties
@@ -1,8 +1,13 @@
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.datasource.url=jdbc:h2:mem:sprintdb
+spring.datasource.username=sa
+spring.datasource.password=
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/stock
-spring.datasource.username= root
-spring.datasource.password= root
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.defer-datasource-initialization = true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
